--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>MD. AMIR HOSSAIN JOWEL</title>
 </head>
+
 <body>
-    
+    <section class="top_banner">
+        <div class="first_sec">
+            <h1>Welcome To</h1>
+            <h1><span class="name_color">Md. Amir Hossain Jowel!</span></h1>
+            <h3>Software Developer</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.</p>
+            <a class="link_button" target="blank" href="https://www.linkedin.com/in/mdamirhossainjowel/">HIRE ME</a>
+        </div>
+        <div class="first_sec"> <img class="first_sec_image" src="showOff/Background.png" alt=""></div>
+    </section>
 </body>
+
 </html>
