--- a/index.html
+++ b/index.html
@@ -23,9 +23,21 @@
                 That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.</p>
-            <a class="link_button" target="blank" href="https://www.linkedin.com/in/mdamirhossainjowel/">HIRE ME</a>
+            <a class="link_button" target="_blank" href="https://www.linkedin.com/in/mdamirhossainjowel/">HIRE ME</a>
         </div>
         <div class="first_sec"> <img class="first_sec_image" src="showOff/Background.png" alt=""></div>
+    </section>
+    <section class="dream_big">
+        <div class="first_sec">
+            <img src="showOff/amir3-removebg-preview.png" alt="">
+        </div>
+        <div class="first_sec">
+            <h1>Dream Big</h1>
+            <h2>Become of a Software Developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link_button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
     </section>
 </body>
 
