--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Hero.</p>
             <a class="link_button" target="_blank" href="https://www.linkedin.com/in/mdamirhossainjowel/">HIRE ME</a>
         </div>
-        <div class="first_sec"> <img class="first_sec_image" src="showOff/Background.png" alt=""></div>
+        <div class="first_sec"> <img class="first_sec_image" src="showOff/amir1-removebg-preview.png" alt=""></div>
     </section>
     <section class="dream_big flexible">
         <div class="first_sec">
@@ -42,17 +42,17 @@
     <section class="Experience_area">
         <h1>Experiences</h1>
         <div class="flexible">
-            <div class="first_sec">
-                <h1>Full Stack Web Developer</h1>
-                <h3>2022-present | Pro Level Developer </h3>
+            <div class="first_sec box_shadow">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="name_color">2022-present | Pro Level Developer </h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="first_sec">
-                <h1>Baby Stack Web Developer</h1>
-                <h3>2020-2021 | Programming Hero Learner</h3>
+            <div class="first_sec box_shadow">
+                <h2>Baby Stack Web Developer</h2>
+                <h3 class="name_color">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed
                     it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
