--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="Experience_area">
         <h1>Experiences</h1>
         <div class="flexible">
-            <div class="first_sec box_shadow">
+            <div id="side_color2" class="first_sec box_shadow">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="name_color">2022-present | Pro Level Developer </h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -50,7 +50,7 @@
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="first_sec box_shadow">
+            <div id="side_color1" class="first_sec box_shadow">
                 <h2>Baby Stack Web Developer</h2>
                 <h3 class="name_color">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
