--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Hero.</p>
             <a class="link_button" target="_blank" href="https://www.linkedin.com/in/mdamirhossainjowel/">HIRE ME</a>
         </div>
-        <div class="first_sec"> <img class="first_sec_image" src="showOff/amir3-removebg-preview.png" alt=""></div>
+        <div class="first_sec"> <img src="showOff/amir3-removebg-preview.png" alt=""></div>
     </section>
     <section class="dream_big flexible">
         <div class="first_sec">
